k8s/base/services/api-edge-proxy/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: api-edge-proxy
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: api-edge-proxy
  ports:
    - name: http
      port: 8080
      targetPort: http
