k8s/base/services/api-edge-proxy/authorization-policy.yaml
apiVersion: security.istio.io/v1beta1
kind: AuthorizationPolicy
metadata:
  name: api-edge-proxy-allow-http
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: api-edge-proxy
  action: ALLOW
  rules:
    - to:
        - operation:
            ports:
              - "8080"
            paths:
              - /
              - /robots.txt
              - /sitemap.xml
              - /healthz
              - /api
              - /api/*
              - /ws
              - /ws/*
